done navber and hero section

--- a/index.html
+++ b/index.html
@@ -16,8 +16,40 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
-    <h1>Hello</h1>
+
 <body>
+    <!-- Navbar section -->
+    <nav class="flex justify-between items-center max-w-[1800px] mx-auto mt-5 bg-[#ffffff]">
+        <div class="nav-left flex items-center justify-center gap-5">
+            <img class="w-[50px] h-[50px]" src="./assets/logo.png" alt="Bd logo">
+            <h1 class="font-bold text-2xl text-[#006747]">Emergency <br>Service</h1>
+        </div>
+        <div class="nav-right flex justify-center items-center gap-20">
+            <div class="bg-[#41ff6b1a] flex justify-center items-center  rounded-lg p-1 px-5 gap-2">
+                <p>0</p>
+                <img class="w-[30px] h-[30px]" src="./assets/heart.png" alt="heart">
+            </div>
+            <div class="bg-[#41ff6b1a] flex justify-center items-center rounded-lg p-1 px-5 gap-2">
+                <p>0</p>
+                <img class="w-[24px] h-[24px] p" src="./assets/coin.png" alt="coin">
+            </div>
+            <div class="bg-[#00a63e] flex rounded-lg p-1 px-5 gap-2">
+                <p>0</p>
+                <p class="">copy</p>
+            </div>
+
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <div class="w-full flex flex-col justify-center items-center bg-green-600 p-10">
+        <img src="./assets/logo-dark.png " alt="">
+        <h1 class="font-bold text-[40px] text-[#ffffff]">Emergency Service Directory</h1>
+        <p class="text-[20px] font-semibold text-[#ffffff]">Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of
+            Bangladesh</p>
+    </div>
+
+    <!-- Main section -->
 
 </body>
 
