--- a/index.html
+++ b/index.html
@@ -45,12 +45,158 @@
     <div class="w-full flex flex-col justify-center items-center bg-green-600 p-10">
         <img src="./assets/logo-dark.png " alt="">
         <h1 class="font-bold text-[40px] text-[#ffffff]">Emergency Service Directory</h1>
-        <p class="text-[20px] font-semibold text-[#ffffff]">Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of
+        <p class="text-[20px] font-semibold text-[#ffffff]">Government Emergency Services at Your Fingertip – A Project
+            by Government of the People’s Republic of
             Bangladesh</p>
     </div>
 
-    <!-- Main section -->
 
+
+    <!-- Main section -->
+    <div class="grid grid-cols-4 gap-10 max-w-[1800px] mx-auto mt-5 p-5">
+
+        <div class="border-2 border-blue-300 w-[436px] h-[360px] p-4 rounded-lg">
+            <div class="flex justify-between items-center">
+                <img class="w-[35px] h-[35px]" src="./assets/ambulance.png" alt="">
+                <img class="w-[26px] h-[26px]" src="./assets/heart.png" alt="">
+            </div>
+            <h1 class="font-bold text-[30px] mt-5"> National Emergency Number</h1>
+            <p class="text-[21] text-[#5C5C5C]">National Emergency</p>
+            <h1 class="mt-5 font-bold text-[38px]">999</h1>
+            <p class="text-[21] text-[#5C5C5C] bg-[#F2F2F2] w-fit rounded-md px-3">All</p>
+            <div class="flex justify-between items-center mt-5">
+                <strong class="border-1 rounded-lg text-[19px] py-1 px-20">copy</strong>
+                <strong class="bg-[#00A63E] rounded-lg text-[19px] py-1 px-20">call</strong>
+            </div>
+
+        </div>
+        <div class="border-2 border-blue-300 w-[436px] h-[360px] p-4 rounded-lg">
+            <div class="flex justify-between items-center">
+                <img class="w-[35px] h-[35px]" src="./assets/ambulance.png" alt="">
+                <img class="w-[26px] h-[26px]" src="./assets/heart.png" alt="">
+            </div>
+            <h1 class="font-bold text-[30px] mt-5"> National Emergency Number</h1>
+            <p class="text-[21] text-[#5C5C5C]">National Emergency</p>
+            <h1 class="mt-5 font-bold text-[38px]">999</h1>
+            <p class="text-[21] text-[#5C5C5C] bg-[#F2F2F2] w-fit rounded-md px-3">All</p>
+            <div class="flex justify-between items-center mt-5">
+                <strong class="border-1 rounded-lg text-[19px] py-1 px-20">copy</strong>
+                <strong class="bg-[#00A63E] rounded-lg text-[19px] py-1 px-20">call</strong>
+            </div>
+
+        </div>
+        <div class="border-2 border-blue-300 w-[436px] h-[360px] p-4 rounded-lg">
+            <div class="flex justify-between items-center">
+                <img class="w-[35px] h-[35px]" src="./assets/ambulance.png" alt="">
+                <img class="w-[26px] h-[26px]" src="./assets/heart.png" alt="">
+            </div>
+            <h1 class="font-bold text-[30px] mt-5"> National Emergency Number</h1>
+            <p class="text-[21] text-[#5C5C5C]">National Emergency</p>
+            <h1 class="mt-5 font-bold text-[38px]">999</h1>
+            <p class="text-[21] text-[#5C5C5C] bg-[#F2F2F2] w-fit rounded-md px-3">All</p>
+            <div class="flex justify-between items-center mt-5">
+                <strong class="border-1 rounded-lg text-[19px] py-1 px-20">copy</strong>
+                <strong class="bg-[#00A63E] rounded-lg text-[19px] py-1 px-20">call</strong>
+            </div>
+
+        </div>
+
+
+
+        <div class="border-2 border-red-300 w-[400px] h-full row-span-3">1</div>
+        <div class="border-2 border-blue-300 w-[436px] h-[360px] p-4 rounded-lg">
+            <div class="flex justify-between items-center">
+                <img class="w-[35px] h-[35px]" src="./assets/ambulance.png" alt="">
+                <img class="w-[26px] h-[26px]" src="./assets/heart.png" alt="">
+            </div>
+            <h1 class="font-bold text-[30px] mt-5"> National Emergency Number</h1>
+            <p class="text-[21] text-[#5C5C5C]">National Emergency</p>
+            <h1 class="mt-5 font-bold text-[38px]">999</h1>
+            <p class="text-[21] text-[#5C5C5C] bg-[#F2F2F2] w-fit rounded-md px-3">All</p>
+            <div class="flex justify-between items-center mt-5">
+                <strong class="border-1 rounded-lg text-[19px] py-1 px-20">copy</strong>
+                <strong class="bg-[#00A63E] rounded-lg text-[19px] py-1 px-20">call</strong>
+            </div>
+
+        </div>
+        <div class="border-2 border-blue-300 w-[436px] h-[360px] p-4 rounded-lg">
+            <div class="flex justify-between items-center">
+                <img class="w-[35px] h-[35px]" src="./assets/ambulance.png" alt="">
+                <img class="w-[26px] h-[26px]" src="./assets/heart.png" alt="">
+            </div>
+            <h1 class="font-bold text-[30px] mt-5"> National Emergency Number</h1>
+            <p class="text-[21] text-[#5C5C5C]">National Emergency</p>
+            <h1 class="mt-5 font-bold text-[38px]">999</h1>
+            <p class="text-[21] text-[#5C5C5C] bg-[#F2F2F2] w-fit rounded-md px-3">All</p>
+            <div class="flex justify-between items-center mt-5">
+                <strong class="border-1 rounded-lg text-[19px] py-1 px-20">copy</strong>
+                <strong class="bg-[#00A63E] rounded-lg text-[19px] py-1 px-20">call</strong>
+            </div>
+
+        </div>
+        <div class="border-2 border-blue-300 w-[436px] h-[360px] p-4 rounded-lg">
+            <div class="flex justify-between items-center">
+                <img class="w-[35px] h-[35px]" src="./assets/ambulance.png" alt="">
+                <img class="w-[26px] h-[26px]" src="./assets/heart.png" alt="">
+            </div>
+            <h1 class="font-bold text-[30px] mt-5"> National Emergency Number</h1>
+            <p class="text-[21] text-[#5C5C5C]">National Emergency</p>
+            <h1 class="mt-5 font-bold text-[38px]">999</h1>
+            <p class="text-[21] text-[#5C5C5C] bg-[#F2F2F2] w-fit rounded-md px-3">All</p>
+            <div class="flex justify-between items-center mt-5">
+                <strong class="border-1 rounded-lg text-[19px] py-1 px-20">copy</strong>
+                <strong class="bg-[#00A63E] rounded-lg text-[19px] py-1 px-20">call</strong>
+            </div>
+
+        </div>
+        <div class="border-2 border-blue-300 w-[436px] h-[360px] p-4 rounded-lg">
+            <div class="flex justify-between items-center">
+                <img class="w-[35px] h-[35px]" src="./assets/ambulance.png" alt="">
+                <img class="w-[26px] h-[26px]" src="./assets/heart.png" alt="">
+            </div>
+            <h1 class="font-bold text-[30px] mt-5"> National Emergency Number</h1>
+            <p class="text-[21] text-[#5C5C5C]">National Emergency</p>
+            <h1 class="mt-5 font-bold text-[38px]">999</h1>
+            <p class="text-[21] text-[#5C5C5C] bg-[#F2F2F2] w-fit rounded-md px-3">All</p>
+            <div class="flex justify-between items-center mt-5">
+                <strong class="border-1 rounded-lg text-[19px] py-1 px-20">copy</strong>
+                <strong class="bg-[#00A63E] rounded-lg text-[19px] py-1 px-20">call</strong>
+            </div>
+
+        </div>
+        <div class="border-2 border-blue-300 w-[436px] h-[360px] p-4 rounded-lg">
+            <div class="flex justify-between items-center">
+                <img class="w-[35px] h-[35px]" src="./assets/ambulance.png" alt="">
+                <img class="w-[26px] h-[26px]" src="./assets/heart.png" alt="">
+            </div>
+            <h1 class="font-bold text-[30px] mt-5"> National Emergency Number</h1>
+            <p class="text-[21] text-[#5C5C5C]">National Emergency</p>
+            <h1 class="mt-5 font-bold text-[38px]">999</h1>
+            <p class="text-[21] text-[#5C5C5C] bg-[#F2F2F2] w-fit rounded-md px-3">All</p>
+            <div class="flex justify-between items-center mt-5">
+                <strong class="border-1 rounded-lg text-[19px] py-1 px-20">copy</strong>
+                <strong class="bg-[#00A63E] rounded-lg text-[19px] py-1 px-20">call</strong>
+            </div>
+
+        </div>
+        <div class="border-2 border-blue-300 w-[436px] h-[360px] p-4 rounded-lg">
+            <div class="flex justify-between items-center">
+                <img class="w-[35px] h-[35px]" src="./assets/ambulance.png" alt="">
+                <img class="w-[26px] h-[26px]" src="./assets/heart.png" alt="">
+            </div>
+            <h1 class="font-bold text-[30px] mt-5"> National Emergency Number</h1>
+            <p class="text-[21] text-[#5C5C5C]">National Emergency</p>
+            <h1 class="mt-5 font-bold text-[38px]">999</h1>
+            <p class="text-[21] text-[#5C5C5C] bg-[#F2F2F2] w-fit rounded-md px-3">All</p>
+            <div class="flex justify-between items-center mt-5">
+                <strong class="border-1 rounded-lg text-[19px] py-1 px-20">copy</strong>
+                <strong class="bg-[#00A63E] rounded-lg text-[19px] py-1 px-20">call</strong>
+            </div>
+
+        </div>
+
+
+    </div>
 </body>
 
 </html>
