--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
             <h1 class="number mt-5 font-bold text-[38px]">999</h1>
             <p class="text-[21] text-[#5C5C5C] bg-[#F2F2F2] w-fit rounded-md px-3">All</p>
             <div class="flex justify-between items-center mt-5">
-                <strong class="copy border-1 border-gray-300 rounded-lg text-[19px] py-1 px-15 flex items-center gap-2">
+                <strong
+                    class="copy border-1 border-gray-300 rounded-lg text-[19px] py-1 px-15 flex items-center gap-2 hover:bg-red-300">
                     <i class="fa-regular fa-copy"></i>
                     <span>Copy</span>
                 </strong>
@@ -126,12 +127,16 @@
         </div>
 
         <!-- History Card -->
-        <div id="history" class="shadow-lg w-[400px] h-full row-span-3 ">
+        <div id="history" class="shadow-lg w-[400px] h-full row-span-3 p-5">
             <div class="flex justify-between items-center p-3">
                 <h3 class="flex justify-center items-center gap-1 font-semibold">
                     <i class="fa-solid fa-clock-rotate-left"></i><span>call History</span>
                 </h3>
-                <p class="bg-[#00A63E] rounded-xl text-white px-4 py-1">Clear</p>
+                <p id="clear-history" class="bg-[#00A63E] rounded-xl text-white px-4 py-1">Clear</p>
+            </div>
+
+            <div id="history-container">
+
             </div>
         </div>
 
