--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- Main section -->
 
     <!-- History Card -->
-    <div class="p-10 md:p-0">
+    <!-- <div class="p-10 md:p-0">
         <div id="history" class="shadow-lg w-full h-full row-span-3 p-5 md:hidden block">
             <div class="flex justify-between items-center p-3">
                 <h3 class="flex justify-center items-center gap-1 font-semibold">
@@ -70,7 +70,7 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <div class="grid md:grid-cols-2 lg:grid-cols-4 grid-cols-1 gap-10 max-w-[1800px] mx-auto mt-5 p-5">
@@ -109,7 +109,7 @@
                 </div>
                 <h1 class="service font-bold text-[30px] mt-5"> Police Helpline Number</h1>
                 <p class="text-[21] text-[#5C5C5C]">National Emergency</p>
-                <h1 class="number mt-5 font-bold text-[38px]">999</h1>
+                <h1 class="number mt-5 font-bold text-[38px]">888</h1>
                 <p class="text-[21] text-[#5C5C5C] bg-[#F2F2F2] w-fit rounded-md px-3">All</p>
                 <div class="flex justify-between items-center mt-5">
                     <strong
@@ -134,7 +134,7 @@
                 </div>
                 <h1 class="service font-bold text-[30px] mt-5"> Fire Service Number</h1>
                 <p class="text-[21] text-[#5C5C5C]">National Emergency</p>
-                <h1 class="number mt-5 font-bold text-[38px]">999</h1>
+                <h1 class="number mt-5 font-bold text-[38px]">968</h1>
                 <p class="text-[21] text-[#5C5C5C] bg-[#F2F2F2] w-fit rounded-md px-3">All</p>
                 <div class="flex justify-between items-center mt-5">
                     <strong
@@ -151,16 +151,15 @@
         </div>
 
         <!-- History Card -->
-        <div id="history" class="shadow-lg w-[400px] h-full row-span-3 p-5 hidden md:block">
-            <div class="flex justify-between items-center p-3">
-                <h3 class="flex justify-center items-center gap-1 font-semibold">
-                    <i class="fa-solid fa-clock-rotate-left"></i><span>call History</span>
-                </h3>
-                <p id="clear-history" class="bg-[#00A63E] rounded-xl text-white px-4 py-1">Clear</p>
-            </div>
-
-            <div id="history-container">
-
+        <div class="md:row-span-3 ">
+            <div id="history" class="shadow-lg w-full md:w-[400px] h-full p-5 md:order-4 order-1">
+                <div class="flex justify-between items-center p-3">
+                    <h3 class="flex justify-center items-center gap-1 font-semibold">
+                        <i class="fa-solid fa-clock-rotate-left"></i><span>Call History</span>
+                    </h3>
+                    <p id="clear-history" class="bg-[#00A63E] rounded-xl text-white px-4 py-1">Clear</p>
+                </div>
+                <div id="history-container"></div>
             </div>
         </div>
 
@@ -173,7 +172,7 @@
                 </div>
                 <h1 class="service font-bold text-[30px] mt-5"> Women child Helpline</h1>
                 <p class="text-[21] text-[#5C5C5C]">National Emergency</p>
-                <h1 class="number mt-5 font-bold text-[38px]">999</h1>
+                <h1 class="number mt-5 font-bold text-[38px]">86321</h1>
                 <p class="text-[21] text-[#5C5C5C] bg-[#F2F2F2] w-fit rounded-md px-3">All</p>
                 <div class="flex justify-between items-center mt-5">
                     <strong
@@ -198,7 +197,7 @@
                 </div>
                 <h1 class="service font-bold text-[30px] mt-5"> Anti corruption Helpline</h1>
                 <p class="text-[21] text-[#5C5C5C]">National Emergency</p>
-                <h1 class="number mt-5 font-bold text-[38px]">999</h1>
+                <h1 class="number mt-5 font-bold text-[38px]">+880..</h1>
                 <p class="text-[21] text-[#5C5C5C] bg-[#F2F2F2] w-fit rounded-md px-3">All</p>
                 <div class="flex justify-between items-center mt-5">
                     <strong
@@ -223,7 +222,7 @@
                 </div>
                 <h1 class="service font-bold text-[30px] mt-5"> Ambulance Service</h1>
                 <p class="text-[21] text-[#5C5C5C]">National Emergency</p>
-                <h1 class="number mt-5 font-bold text-[38px]">999</h1>
+                <h1 class="number mt-5 font-bold text-[38px]">017</h1>
                 <p class="text-[21] text-[#5C5C5C] bg-[#F2F2F2] w-fit rounded-md px-3">All</p>
                 <div class="flex justify-between items-center mt-5">
                     <strong
